--- a/frontend/src/components/HomeIntro/HomeIntro.module.css
+++ b/frontend/src/components/HomeIntro/HomeIntro.module.css
@@ -8,7 +8,7 @@
   color: white;
   padding-top: 6.25rem;
   z-index: 1;
-  width: 50%;
+  width: 60%;
   margin: auto;
   position: relative;
   height: 85vh;
@@ -27,54 +27,13 @@
 }
 
 .explore {
-  font-weight: bold;
   font-family: raleway;
 }
 
-@media (max-width: 1300px) {
-  .container {
-    padding-top: 5rem;
-  }
-  .explore {
-    font-size: 1.25rem;
-  }
-  .siteName {
-    font-size: 2.5rem;
-  }
-  #submitPrompt {
-    font-size: 1.25rem !important;
-  }
-}
-
-@media (max-width: 1000px) {
-  .container {
-    padding-top: 3.125rem;
-    width: 65%;
-  }
-}
-
-@media (max-width: 700px) {
-  .container {
-    padding-top: 1.875rem;
-    width: 75%;
-  }
-  .siteName {
-    font-size: 2rem;
-  }
-  .explore {
-    font-size: 1.125rem;
-  }
-  .exploreApi {
-    font-size: 0.75rem;
-  }
-}
-
-.exploreApi {
+.samples {
   margin-top: 0.625rem;
-  font-size: 16px;
-  font-family: lato;
-  font-weight: regular;
   margin-bottom: 1.25rem;
+  font-weight: 400;
 }
 
 .submitLink {
@@ -86,26 +45,28 @@
   background-color: var(--color-darkestBlue);
   border-radius: 0.313rem;
   font-family: Lato;
-  font-size: 1rem;
   padding: 0.625rem;
   cursor: pointer;
 }
 
 .submitContainer {
   position: absolute;
-  bottom: 0%;
-  left: 10%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%; /* Need a specific value to work */
   text-align: left;
   margin-top: 6.25rem;
 }
 
-#submitPrompt {
-  font-size: 1.375rem;
-  font-weight: 400;
+.submitPrompt {
   font-family: raleway;
+  font-weight: bold;
 }
 
-#searchDetails {
+.searchDetails {
   position: absolute;
   top: 2.5rem;
   z-index: 1;
@@ -115,4 +76,35 @@
 .results {
   /* position: absolute; */
   z-index: 2;
+}
+
+@media (max-width: 1300px) {
+  .container {
+    padding-top: 5rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container {
+    padding-top: 3.125rem;
+    width: 80%;
+  }
+}
+
+@media (max-width: 700px) {
+  .container {
+    padding-top: 1.3rem;
+    width: 90%;
+  }
+  .siteName {
+    margin-bottom: 0.5rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .container {
+    padding-top: 1.875rem;
+    width: 95%;
+    height: 90vh;
+  }
 }
