color for warning added

--- a/frontend/src/vars.css
+++ b/frontend/src/vars.css
@@ -10,4 +10,7 @@
 
   --color-agree: #3fb54d;
   --color-disagree: #de4343;
+
+  --color-warningBackground: #ffc4c4;
+  --color-warning: #ff1010;
 }
