--- a/frontend/src/components/Graphs/components/ChartBlurb/ChartBlurb.module.css
+++ b/frontend/src/components/Graphs/components/ChartBlurb/ChartBlurb.module.css
@@ -6,7 +6,6 @@
 
 .category {
   font-weight: 600;
-  font-size: 14px;
   display: inline-block;
 }
 
@@ -14,30 +13,28 @@
   border: none;
   height: 2px;
   background: var(--color-darkestBlue);
-  margin: 0px 0px 5px 0px;
+  margin: 0rem 0rem 0.313rem 0rem;
 }
 
 .title {
-  font-size: 22px;
   font-weight: 600;
 }
 
 .content {
-  font-size: 16px;
   font-weight: 400;
-  margin: 10px 0px;
+  margin: 0.625rem 0rem;
 }
 
 .circle {
   display: inline-block;
-  width: 10px;
-  height: 10px;
-  -webkit-border-radius: 25px;
-  -moz-border-radius: 25px;
-  border-radius: 25px;
+  width: 0.625rem;
+  height: 0.625rem;
+  -webkit-border-radius: 1.625rem;
+  -moz-border-radius: 1.625rem;
+  border-radius: 1.625rem;
   color: none;
   border: 2px solid var(--color-darkestBlue);
-  margin: 0px 3px 0px 0px;
+  margin: 0rem 0.188rem 0rem 0rem;
 }
 
 @media (max-width: 900px) {
