--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@
 
 .navbar {
   background-color: var(--color-darkestBlue);
-  padding: 10px 7%;
+  padding: 0.625rem 7%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -16,9 +16,9 @@
   color: white;
   background-color: var(--color-darkestBlue);
   border: 1px solid white;
-  border-radius: 5px;
+  border-radius: 0.313rem;
   font-family: Lato;
-  padding: 5px 20px;
+  padding: 0.313rem 1.25rem;
   cursor: pointer;
   text-decoration: none;
 }
@@ -34,12 +34,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 200px;
+  width: 12.5rem;
 }
 
 @media (max-width: 1000px) {
   .navContainer {
-    width: 180px;
+    width: 11.25rem;
   }
 }
 
