--- a/frontend/src/components/Reviews/components/ReviewsShowMore/ReviewsShowMore.module.css
+++ b/frontend/src/components/Reviews/components/ReviewsShowMore/ReviewsShowMore.module.css
@@ -2,18 +2,18 @@
 
 .pageSelect {
   font-family: lato;
-  font-size: 20px;
   text-align: left;
+  color: var(--color-textGray);
 }
 
 .showTitle {
-  font-size: 16px;
   font-family: lato;
   font-weight: 400;
-  margin: 10px 0px;
+  margin: 0.625rem 0px;
 }
 
 .button {
   background-color: var(--color-lightBlue);
+  margin-right: 0.7rem;
   color: white;
 }
