--- a/frontend/src/components/ReviewsSidebar/components/TitleCard/TitleCard.module.css
+++ b/frontend/src/components/ReviewsSidebar/components/TitleCard/TitleCard.module.css
@@ -11,8 +11,8 @@
     #fdc830
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
-  padding: 50px 50px 50px 50px;
-  border-radius: 13px;
+  padding: 3.125rem;
+  border-radius: 1rem;
   text-align: center;
   position: relative;
   display: flex;
@@ -27,11 +27,11 @@
 }
 
 .prof {
-  font-size: 30px;
+  font-size: 1.875rem;
 }
 
 .course {
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 
 .nugget {
@@ -41,14 +41,14 @@
 }
 
 .headerContainer {
-  margin-top: 30px;
-  max-width: 200px;
+  margin-top: 1.875rem;
+  max-width: 12.5rem;
   display: flex;
   justify-content: space-between;
 }
 
 .subheader {
-  font-size: 26px;
+  font-size: 1.625rem;
   font-family: lato;
   font-weight: 400;
 }
@@ -63,14 +63,14 @@
   border-width: 0px;
   background-color: white;
   width: 80%;
-  margin: 5px 0px;
+  margin: 0.313rem 0rem;
 }
 
 /* tablet size */
 @media (max-width: 1200px) {
   .card {
     width: 32%;
-    padding: 50px 30px 50px 30px;
+    padding: 3.125rem 1.875rem 3.125rem 1.875rem;
   }
 }
 
@@ -79,12 +79,13 @@
     width: 48%;
   }
   .title {
-    font-size: 26px;
+    font-size: 1.625rem;
   }
 }
 
 @media (max-width: 500px) {
   .card {
     width: 100%;
+    margin-bottom: 1rem;
   }
 }
