--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,10 +5,40 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: lato;
 }
 
 body {
   overflow-x: hidden;
+}
+
+li {
+  list-style-type: none;
+}
+
+/* 14px */
+.smallText {
+  font-size: 0.875rem;
+}
+
+/* 16px */
+.medText {
+  font-size: 1rem;
+}
+
+/* 22px */
+.largeText {
+  font-size: 1.375rem;
+}
+
+/* 26px */
+.largerText {
+  font-size: 1.625rem;
+}
+/* card class for box shadow */
+.card {
+  box-shadow: 0px 0.188rem 0.375rem #b9b9b9;
+  border-radius: 1rem;
 }
 
 button {
@@ -22,8 +52,4 @@ button {
 
 button:hover {
   cursor: pointer;
-}
-
-li {
-  list-style-type: none;
 }
