--- a/frontend/src/components/HomeIntro/HomeIntro.module.css
+++ b/frontend/src/components/HomeIntro/HomeIntro.module.css
@@ -78,6 +78,11 @@
   z-index: 2;
 }
 
+.courseLink {
+  color: white;
+  text-decoration: none;
+}
+
 @media (max-width: 1300px) {
   .container {
     padding-top: 5rem;
