--- a/frontend/src/components/Loading/Loading.module.css
+++ b/frontend/src/components/Loading/Loading.module.css
@@ -11,6 +11,18 @@
   margin: auto;
   width: 100%;
 }
+
+/* mobile size */
+@media (max-width: 600px) {
+  .container {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  h1 {
+    font-size: 24px;
+  }
+}
+
 .lds-ring {
   width: 80px;
   height: 80px;
