reviews page no result component and width fix

--- a/frontend/src/screens/Reviews/Review.module.css
+++ b/frontend/src/screens/Reviews/Review.module.css
@@ -1,6 +1,9 @@
 .container {
   display: flex;
   justify-content: center;
+  max-width: 1400px;
+  margin: auto;
+  padding: 0px 2rem;
 }
 
 .loadingContainer {
