--- a/frontend/src/components/HomeIntro/HomeIntro.module.css
+++ b/frontend/src/components/HomeIntro/HomeIntro.module.css
@@ -97,6 +97,9 @@
 }
 
 @media (max-width: 700px) {
+  .siteName {
+    display: none;
+  }
   .container {
     padding-top: 1.3rem;
     width: 90%;
